Moved calendar from home to profile page

--- a/index.html
+++ b/index.html
@@ -1,88 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
 
-<head>
-<!--[if lt IE 9]>
-	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
-
-<!-- META ===================================================== -->
-	<meta charset='utf-8'>
-	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=0">
-	<title>Monthly - A jQuery Calendar Plugin</title>
-	<link rel="icon" href="images/favIcon.png">
-
-<!-- Favicon  ========================================== -->
-
-
-<!-- CSS ======================================================
-	<link rel="stylesheet" href="css/responsivetables.css">-->
-	<!-- Demo CSS (don't use) -->
-	<link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet" type="text/css">
-
-	<link rel="stylesheet" href="css/monthly.css">
-	<link rel="stylesheet" href="css/home.css">
-
-</head>
-
-<body>
-
-	<div class="login">
-		<h1>Login</h1>
-		<form action="authenticate.php" method="post">
-			<label for="username">
-				<i class="fas fa-user"></i>
-			</label>
-			<input type="text" name="username" placeholder="Username" id="username" required>
-			<label for="password">
-				<i class="fas fa-lock"></i>
-			</label>
-			<input type="password" name="password" placeholder="Password" id="password" required>
-			<input type="submit" value="Login">
-		</form>
-	</div>
-
-	
-<div class="page">
-		<div style="width:100%; max-width:600px; display:inline-block;">
-			<div class="monthly" id="mycalendar"></div>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>Login</title>
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
+		<link rel="stylesheet" href="css/home.css">
+	</head>
+	<body>
+		<div class="login">
+			<h1>Login</h1>
+			<form action="authenticate.php" method="post">
+				<label for="username">
+					<i class="fas fa-user"></i>
+				</label>
+				<input type="text" name="username" placeholder="Username" id="username" required>
+				<label for="password">
+					<i class="fas fa-lock"></i>
+				</label>
+				<input type="password" name="password" placeholder="Password" id="password" required>
+				<input type="submit" value="Login">
+			</form>
 		</div>
-		<br><br>
-		<br>
-</div>
-<!-- JS ======================================================= -->
-<script type="text/javascript" src="js/jquery.js"></script>
-<script type="text/javascript" src="js/monthly.js"></script>
-<script type="text/javascript">
-	$(window).load( function() {
-
-		$('#mycalendar').monthly({
-			mode: 'event',
-			//jsonUrl: 'events.json',
-			//dataType: 'json'
-			xmlUrl: 'events.xml'
-		});
-
-		$('#mycalendar2').monthly({
-			mode: 'picker',
-			target: '#mytarget',
-			setWidth: '250px',
-			startHidden: true,
-			showTrigger: '#mytarget',
-			stylePast: true,
-			disablePast: true
-		});
-
-	switch(window.location.protocol) {
-	case 'http:':
-	case 'https:':
-	// running on a server, should be good.
-	break;
-	case 'file:':
-	//alert('Just a heads-up, events will not work when run locally.');
-	}
-
-	});
-</script>
-</body>
+	</body>
 </html>
