--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=0">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta charset='utf-8'>
+
 <head>
+	<script src="js/main.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.js"></script>
 <!--[if lt IE 9]>
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
 
 <!-- META ===================================================== -->
-    <title>Monthly - A jQuery Calendar Plugin</title>
-    <meta name="description" content="A method for responsive tables">
+	<meta charset='utf-8'>
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=0">
+	<title>Monthly - A jQuery Calendar Plugin</title>
+	<link rel="icon" href="images/favIcon.png">
 
 <!-- Favicon  ========================================== -->
 
@@ -19,107 +21,97 @@
 	<link rel="stylesheet" href="css/responsivetables.css">-->
 	<!-- Demo CSS (don't use) -->
 	<link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet" type="text/css">
-	<style type="text/css">
-		body, html {
-			padding:0px;
-			margin:0px;
-			background: url('images/bg.jpg') center;
-			background-size:cover;
-			background-attachment: fixed;
-			text-align:center;
-			color:#fff;
-			line-height: 1.4em;
-			font-family: "Trebuchet MS", Helvetica, sans-serif;
-		}
-		body {
-			padding:10vh 0;
-		}
-		h1 {
-			font-family: 'Yanone Kaffeesatz', sans-serif;
-			text-align: center;
-			font-size: 77px;
-			text-shadow: 0 0px 30px rgba(0, 0, 0, 0.2);
-		}
-		h2 {
-			font-family: 'Yanone Kaffeesatz', sans-serif;
-			font-size:30px;
-			text-shadow: 0 0px 20px rgba(0, 0, 0, 0.3);
-			color:#fff;
-		}
-		.monthly {
-			box-shadow: 0 13px 40px rgba(0, 0, 0, 0.5);
-			font-size: 0.8em;
-		}
 
-		input[type="text"] {
-			padding: 15px;
-			border-radius: 2px;
-			font-size: 16px;
-			outline: none;
-			border: 2px solid rgba(255, 255, 255, 0.5);
-			background: rgba(63, 78, 100, 0.27);
-			color: #fff;
-			width: 250px;
-			box-sizing: border-box;
-			font-family: "Trebuchet MS", Helvetica, sans-serif;
-		}
-		input[type="text"]:hover {
-			border: 2px solid rgba(255, 255, 255, 0.7);
-		}
-		input[type="text"]:focus {
-			border: 2px solid rgba(255, 255, 255, 1);
-			background:#eee;
-			color:#222;
-		}
-
-		.button {
-			display: inline-block;
-			padding: 15px 25px;
-			margin: 25px 0 75px 0;
-			border-radius: 3px;
-			color: #fff;
-			background: #000;
-			letter-spacing: .4em;
-			text-decoration: none;
-			font-size: 13px;
-		}
-		.button:hover {
-			background: #3b587a;
-		}
-		.desc {
-			max-width: 250px;
-			text-align: left;
-			font-size:14px;
-			padding-top:30px;
-			line-height: 1.4em;
-		}
-		.resize {
-			background: #222;
-			display: inline-block;
-			padding: 6px 15px;
-			border-radius: 22px;
-			font-size: 13px;
-		}
-		@media (max-height: 700px) {
-			.sticky {
-				position: relative;
-			}
-		}
-		@media (max-width: 600px) {
-			.resize {
-				display: none;
-			}
-		}
-	</style>
 	<link rel="stylesheet" href="css/monthly.css">
+	<link rel="stylesheet" href="css/home.css">
+
 </head>
+
 <body>
+
+<div id="form">
+	<form action="php/login.php" method="POST">
+		<p>
+			<label>Username:</label>
+			<input type="text" id="user" name="user" />
+		</p>
+
+		<p>
+			<label>Password:</label>
+			<input type="text" id="password" name="password" />
+		</p>
+
+		<p>
+			<input type="submit" id="btn" name="login" />
+		</p>
+</div>
+
+
 <div class="page">
-		<div style="width:100%; max-width:600px; display:inline-block;">
+		<div style="width:100%; max-width:600px; padding-left: 3em;">
 			<div class="monthly" id="mycalendar"></div>
 		</div>
-		<br><br>
-		<br>
+		<canvas id="myChart" width="400" height="100"></canvas>
+		<script>
+		var ctx = document.getElementById('myChart');
+		var myChart = new Chart(ctx, {
+		    type: 'line',
+		    data: {
+		        labels: ["January", "February", "March", "April", "May", "June", "July", "Augest, September", "November", "December"],
+		        datasets: [{
+		            label: 'Weight',
+		            data: [250, 245, 247, 240, 230, 225, 220, 215, 210, 205],
+		            backgroundColor: [
+		                'rgba(255, 99, 132, 0.2)',
+		                'rgba(54, 162, 235, 0.2)',
+		                'rgba(255, 206, 86, 0.2)',
+		                'rgba(75, 192, 192, 0.2)',
+		                'rgba(153, 102, 255, 0.2)',
+		                'rgba(255, 159, 64, 0.2)'
+		            ],
+		            borderColor: [
+		                'rgba(255, 99, 132, 1)',
+		                'rgba(54, 162, 235, 1)',
+		                'rgba(255, 206, 86, 1)',
+		                'rgba(75, 192, 192, 1)',
+		                'rgba(153, 102, 255, 1)',
+		                'rgba(255, 159, 64, 1)'
+		            ],
+		            borderWidth: 1
+		        },
+				{
+	label: "Body Mass Index",
+	data: [25.4, 33.2, 32.3, 45.2, 12.3, 18.1, 19.3, 25.6, 12.4, 1.1],
+	backgroundColor: [
+		'rgba(255, 99, 132, 0.2)',
+		'rgba(54, 162, 235, 0.2)',
+		'rgba(255, 206, 86, 0.2)',
+		'rgba(75, 192, 192, 0.2)',
+		'rgba(153, 102, 255, 0.2)',
+		'rgba(255, 159, 64, 0.2)'
+	],
+	borderColor: [
+		'rgba(255, 99, 132, 1)',
+		'rgba(54, 162, 235, 1)',
+		'rgba(255, 206, 86, 1)',
+		'rgba(75, 192, 192, 1)',
+		'rgba(153, 102, 255, 1)',
+		'rgba(255, 159, 64, 1)'
+	],
+}
+			]
+		    },
+		    options: {
+		        scales: {
+		            yAxes: [{
+		                ticks: {
+		                    beginAtZero: true
+		                }
+		            }]
+		        }
+		    }
+		});
+		</script>
 </div>
 <!-- JS ======================================================= -->
 <script type="text/javascript" src="js/jquery.js"></script>
